[gd_scene load_steps=5 format=3 uid="uid://b64e80bgegcm5"]

[ext_resource type="Script" path="res://caught_fish_ui.gd" id="1_r6gc0"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_f65cx"]

[sub_resource type="Theme" id="Theme_7lp4e"]
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)
RichTextLabel/colors/font_outline_color = Color(0.907616, 0.50955, 0.664933, 1)
RichTextLabel/constants/outline_size = 3
RichTextLabel/font_sizes/normal_font_size = 28

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ymvj4"]

[node name="caughtFishUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_r6gc0")

[node name="popupBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.886275, 0.466667, 1)
metadata/_edit_lock_ = true

[node name="fishImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -160.0
offset_right = 144.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_f65cx")

[node name="lore" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -361.0
offset_top = 35.0
offset_right = 31.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.459395, 0.439428, 0.397791, 0.486275)

[node name="description_label" type="RichTextLabel" parent="lore"]
layout_mode = 0
offset_left = 17.0
offset_top = 13.0
offset_right = 317.0
offset_bottom = 213.0
theme = SubResource("Theme_7lp4e")
bbcode_enabled = true
text = "Description:"
scroll_active = false

[node name="description" type="RichTextLabel" parent="lore"]
layout_mode = 0
offset_left = 17.0
offset_top = 45.0
offset_right = 377.0
offset_bottom = 205.0
theme = SubResource("Theme_7lp4e")
bbcode_enabled = true
scroll_active = false

[node name="species" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.0
offset_top = -270.0
offset_right = 348.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.459395, 0.439428, 0.397791, 0.486275)

[node name="fishSpeciesLabel" type="RichTextLabel" parent="species"]
layout_mode = 0
offset_left = -56.0
offset_top = 16.0
offset_right = 600.0
offset_bottom = 80.0
theme = SubResource("Theme_7lp4e")
bbcode_enabled = true
scroll_active = false

[node name="stats" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = 35.0
offset_right = 352.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.459395, 0.439428, 0.397791, 0.486275)

[node name="height_weight" type="RichTextLabel" parent="stats"]
layout_mode = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 324.0
offset_bottom = 221.0
theme = SubResource("Theme_7lp4e")
bbcode_enabled = true
text = "Length (kg):

Weight (inches):"
scroll_active = false

[node name="length" type="RichTextLabel" parent="stats"]
layout_mode = 0
offset_left = 24.0
offset_top = 53.0
offset_right = 324.0
offset_bottom = 103.0
theme = SubResource("Theme_7lp4e")
bbcode_enabled = true
text = "
"
scroll_active = false

[node name="weight" type="RichTextLabel" parent="stats"]
layout_mode = 0
offset_left = 24.0
offset_top = 133.0
offset_right = 324.0
offset_bottom = 183.0
theme = SubResource("Theme_7lp4e")
bbcode_enabled = true
scroll_active = false

[node name="funparticles" type="CPUParticles2D" parent="."]
visible = false
top_level = true
position = Vector2(0, -80)
amount = 25
lifetime = 15.0
texture = SubResource("PlaceholderTexture2D_ymvj4")
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
orbit_velocity_min = 40.0
orbit_velocity_max = 40.0

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
